--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--  Vendors  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
-    <title>Nexa Evolve</title>
+    <title>Scheduler Pro</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
